--- a/app/src/main/res/layout/update.xml
+++ b/app/src/main/res/layout/update.xml
@@ -10,10 +10,10 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="260dp"
+        android:layout_marginBottom="246dp"
         android:layout_marginTop="3dp"
         android:src="@drawable/ciscologo"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/taskRunner"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,13 +53,25 @@
 
     <Button
         android:id="@+id/commandRunner"
-        android:layout_width="176dp"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="52dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/taskRunner"
         app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/taskRunner"
+        android:layout_width="122dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="42dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/commandRunner"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </android.support.constraint.ConstraintLayout>
