--- a/app/src/main/res/layout/single_item_view.xml
+++ b/app/src/main/res/layout/single_item_view.xml
@@ -13,4 +13,11 @@ android:layout_height="fill_parent" >
     android:textSize="16dip"
     android:textStyle="bold"
     />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Test">
+    </TextView>
 </RelativeLayout>
