--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="181dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="33dp"
         android:maxWidth="350dp"
         android:maxLines="32"
