--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:text="Command button"
@@ -37,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:maxLines="32"
         android:maxWidth="325dp"
         android:scrollbars="vertical"
@@ -51,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="78dp"
         android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:visibility="invisible"
