--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -14,11 +14,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:focusableInTouchMode="false"
         android:text="Command button"
         app:layout_constraintBottom_toTopOf="@+id/CommandNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/command"
@@ -59,7 +60,8 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/commandTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commandButton" />
+        app:layout_constraintTop_toBottomOf="@+id/commandButton"
+        />
 
     />
 </android.support.constraint.ConstraintLayout>
