--- a/app/src/main/res/layout/system_advisor.xml
+++ b/app/src/main/res/layout/system_advisor.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:focusable="true"
         android:focusableInTouchMode="false"
         android:text="System Advisor"
