--- a/app/src/main/res/layout/menu_mockup.xml
+++ b/app/src/main/res/layout/menu_mockup.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent">
 
 
-
     <RelativeLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -106,94 +105,98 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="321dp" />
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="179dp"
-            android:layout_alignBottom="@+id/editText5"
-            android:layout_alignLeft="@+id/editText2"
-            android:layout_alignStart="@+id/editText2"
-            android:layout_marginLeft="141dp"
-            android:layout_marginStart="141dp"
-            app:srcCompat="@drawable/piegraphtest"
-            tools:layout_editor_absoluteX="67dp"
-            tools:layout_editor_absoluteY="402dp" />
-
         <TextView
             android:id="@+id/editText"
-            android:layout_width="match_parent"
+            android:layout_width="368dp"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/editText2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/imageView4"
             android:background="@android:color/transparent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Total Devices on Network: 34"
+            android:textColor="@color/windowBackground"
             android:textSize="14sp"
-            android:textColor="@color/windowBackground" />
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="23dp"
+            android:layout_above="@+id/editText3"
+            android:layout_alignLeft="@+id/editText3"
+            android:layout_alignStart="@+id/editText3"
+            android:layout_marginBottom="16dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Access Points: 10"
-            android:textSize="12sp"
-            android:textColor="@color/windowBackground" />
-
-        <TextView
-            android:id="@+id/editText3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/editText2"
-            android:layout_alignStart="@+id/editText2"
-            android:layout_below="@+id/editText2"
-            android:layout_marginTop="17dp"
-            android:background="@android:color/transparent"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Routers: 8"
-            android:textSize="12sp"
-            android:textColor="@color/windowBackground" />
+            android:textColor="@color/windowBackground"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/editText4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/editText5"
             android:layout_alignLeft="@+id/editText5"
             android:layout_alignStart="@+id/editText5"
-            android:layout_below="@+id/editText3"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="12dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Mobile Devices: 6"
-            android:textSize="12sp"
-            android:textColor="@color/windowBackground" />
+            android:textColor="@color/windowBackground"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/editText5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/editText3"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/editText3"
-            android:layout_marginBottom="76dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="31dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Unknown Cisco Device: 10"
             android:textColor="@color/windowBackground"
             android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/editText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/editText4"
+            android:layout_alignLeft="@+id/editText4"
+            android:layout_alignStart="@+id/editText4"
+            android:layout_marginBottom="13dp"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Routers: 8"
+            android:textColor="@color/windowBackground"
+            android:textSize="12sp"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="454dp" />
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/chart"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/buttonStatistics"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     </RelativeLayout>
 
